--- a/src/Application/App.scss
+++ b/src/Application/App.scss
@@ -22,10 +22,9 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  padding: 3rem;
   box-sizing: border-box;
 }
 
 .app {
-  background-color: #333;
+  text-align: center;
 }
